<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttonGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/shizukuStatusPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_shizuku_status" />

        <TextView
            android:id="@+id/shizukuStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/shizukuPermissionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/action_grant"
            android:visibility="gone" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_exit" />
    </LinearLayout>

    <Button
        android:id="@+id/displayDeviceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minWidth="200dp"
        android:text="@string/home_screen" />

    <Button
        android:id="@+id/simulateScreenOffBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minWidth="200dp"
        android:text="@string/home_simulate_off" />

    <Button
        android:id="@+id/inputDeviceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minWidth="200dp"
        android:text="@string/settings_title" />

    <Button
        android:id="@+id/shizukuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minWidth="200dp"
        android:text="@string/brand_shizuku" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:text="@string/action_about" />

</LinearLayout>
